[package]
name = "winit-blit"
version = "0.0.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"
description = "Reserved. Blit directly to Winit Windows"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["x11"]
x11 = ["x11-dl", "once_cell"]

[dependencies]
raw-window-handle = "0.3"
rayon = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["windef", "winuser", "wingdi"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
x11-dl = { version = "2.18.5", optional = true }
once_cell = { version = "*", optional = true }

[dev-dependencies]
winit = "0.24.0"
serial_test = "*"
